NIFI-12343 allow override of JSON field max string length for PutElasticsearchJson